fixed alignment on list

--- a/style.css
+++ b/style.css
@@ -94,14 +94,14 @@ li {
 }
 
 .list-category {
-    font-size: 20px;
+    font-size: 16px;
     font-family: 'Outfit', sans-serif;
     font-style: bold;
     font-weight: 600;
     list-style-type: none;
     padding: 0;
     margin-left: 0;
-    margin-bottom: 2px;
+    margin-bottom: 15px;
 }
 
 .list-category:before {
